# ModelPort

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  SECURITY.md  config.example.toml  docker-compose.files.yml  docker-compose.yml
.cargo/: audit.toml
dashboard/: Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
docs/: ACCEPTANCE.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  DASHBOARD_UX.md  DATA_LIFECYCLE.md  DEVELOPMENT.md  DOCKER.md  ENTERPRISE_ROADMAP.md  GITHUB_SETUP.md  GPT_IMAGE_2_GUIDE.md  LOCAL_RUNTIME.md  OIDC.md  OPERATIONS.md  PERFORMANCE.md  PROJECT_GUIDE.md  PROVIDER_MATRIX.md  README.md  SYSTEMD.md  TOOL_USE_COMPATIBILITY.md
migrations/: 0001_enterprise_foundation.sql  0002_idempotency_and_leases.sql  0003_transactional_budgets.sql  0004_redact_historical_error_details.sql
scripts/: acceptance.sh  backup-compose.sh  bench.sh  build-container.sh  build-release.sh  check-all.sh  check-doc-links.mjs  check.sh  config-validate.sh  dev.sh  doctor.sh  install-deps-ubuntu.sh  lib.sh  provider-matrix.sh  restart.sh  smoke-test.sh  start.sh  status.sh  stop.sh  tool-use-acceptance.sh
src/: auth.rs  cli.rs  config.rs  control.rs  control_view.rs  database.rs  deployment.rs  domain.rs  enterprise_ledger.rs  error.rs  exchange.rs  fidelity.rs  http.rs  lib.rs  main.rs  metrics.rs  oidc.rs  pricing.rs  provider_status.rs  routes.rs  server.rs  storage.rs  stream_lifecycle.rs  tool_use.rs  types.rs  usage.rs
tests/: config_validate.rs
tools/: zig-cc-wrapper.sh  (+1 more)
(+159 files in other folders)
