[package]
name = "model-port"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "A self-hosted multi-protocol model gateway for Anthropic and OpenAI-compatible workflows."
license = "MIT"
readme = "README.md"
repository = "https://github.com/tiammomo/ModelPort"
homepage = "https://github.com/tiammomo/ModelPort"
keywords = ["claude-code", "anthropic", "openai-compatible", "llm", "gateway"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[dependencies]
async-stream = "0.3"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros"] }
futures-util = "0.3"
openidconnect = { version = "4.0.1", default-features = false, features = ["reqwest", "rustls-tls"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["json", "macros", "migrate", "postgres", "runtime-tokio-rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
toml = "0.9"
tower = { version = "0.5", features = ["limit", "util"] }
tower-http = { version = "0.6", features = ["request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
